k8s/production/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: server
  template:
    metadata:
      labels:
        app: server
    spec:
      containers:
        - name: server
          image: lucaspuerari/server:v0.0.3-production
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
