k8s/production/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: server
  labels:
    service: server
spec:
  selector:
    app: server
  ports:
    - name: server
      port: 8080
      targetPort: 8080
